main.js변경, vite 환경 로더 수정 js>jsx

--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,7 @@ textarea {
   width: 100%;
   background: white;
   transition: all ease-out 150ms;
+  align-items: center;
 }
 
 .list-item .title {
